# mantle-turing-ai-swarm

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  PIPELINE.md  README.md  index.html  render.yaml
.cargo/: config.toml
.github/workflows/: keep-alive.yml
assets/: index-CzklNXzl.css  index-OWIZmZWu.js
config/: models.toml  prompts.toml  thresholds.toml
contracts/: ERC8004Registry.sol  X402FlashLiquidator.sol
contracts/script/: Deploy.s.sol
contracts/test/: X402.t.sol
crates/core-ipc/: Cargo.toml
crates/core-ipc/src/: lib.rs
crates/hive-intel/: Cargo.toml
crates/hive-intel/src/: adaptive.rs  affective.rs  anomaly.rs  api.rs  backtester.rs  benchmark.rs  bloom.rs  boost.rs  brain.rs  causal.rs  changepoint.rs  correlation.rs  decay.rs  dqs.rs  drift.rs  entity.rs  evolution.rs  hive_engine.rs  hive_indicators.rs  hybrid_recall.rs  induction.rs  legitimacy.rs  lib.rs  markov.rs  ml_local.rs  orderbook_imbalance.rs  paper_engine.rs  patterns.rs  portfolio_guard.rs  prospective.rs  recall.rs  regime.rs  replay.rs  reward.rs  risk_sizing.rs  semantic.rs  snapshot.rs  strategy_validator.rs  tilt.rs  turbo.rs
crates/mantle-chain/: Cargo.toml
crates/mantle-chain/src/: dex.rs  erc8004.rs  lib.rs  onchain.rs  provider.rs  wallet.rs
crates/ouroboros-brain/: Cargo.toml  E:\ROXY_SYSTEM\Projects\Antigravity-Swarm\ouroboros_verdicts.json
crates/ouroboros-brain/src/: api_pool.rs  circuit_breaker.rs  config.rs  decision_memory.rs  hyper.rs  ipc.rs  judge.rs  lib.rs  macro_guard.rs  openrouter.rs  risk_engine.rs  state.rs
crates/ouroboros-brain/src/agents/: debater.rs  empiricist.rs  macro_judge.rs  meta_judge.rs  mod.rs
crates/swarm-engine/: Cargo.toml
crates/swarm-engine/src/: main.rs  telemetry.rs
crates/titan-core/: Cargo.toml
crates/titan-core/src/: alpha_head.rs  auto_ramp.rs  brain.rs  brain_feeds.rs  calibration.rs  confidence.rs  deallow.rs  entry.rs  execution.rs  indicators.rs  lib.rs  logger.rs  orchestrator.rs  patience.rs  risk.rs  safe_io.rs  scanner.rs  shield.rs  trailing.rs  types.rs  unstuck.rs
crates/x402-consensus/: Cargo.toml
crates/x402-consensus/src/: config.rs  engine.rs  lib.rs  main.rs  network.rs
crates/x402-liquidator/: Cargo.toml
crates/x402-liquidator/src/: config.rs  engine.rs  main.rs  network.rs
crates/x402-memory/: Cargo.toml
crates/x402-memory/src/: config.rs  engine.rs  main.rs  network.rs
crates/x402-polymarket/: Cargo.toml
crates/x402-polymarket/src/: config.rs  engine.rs  main.rs  network.rs
crates/x402-risk/: Cargo.toml
crates/x402-risk/src/: config.rs  engine.rs  lib.rs  main.rs  network.rs
crates/x402-sniper/: Cargo.toml
crates/x402-sniper/src/: bounty.rs  config.rs  engine.rs  main.rs  network.rs
dashboard/: index.html  lusion_dump.js  package-lock.json  package.json  refactor.cjs  refactor.js  vercel.json
dashboard/api/: chat.js  keepalive.js
dashboard/lusion-mirror/: index.html
dashboard/lusion-mirror/assets/: index.22890b47.css  index.f4419199.js
dashboard/lusion-mirror/assets/models/: lsn_logo.buf
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AnimatedArchitecture.tsx  CustomCursor.tsx  FsrEasuPass.tsx  LiquidGlassShader.tsx  LusionDitherLayer.tsx  LusionFinalPass.tsx  NoiseOverlay.tsx  ScreenPaint.tsx  SovereignMascotPanel.tsx  SwarmChat.tsx  WebGLErrorBoundary.tsx
dashboard/src/hooks/: useTelemetry.ts
tools/: udp_injector.py
