[workspace]
resolver = "2"
members = [
    "crates/ouroboros-brain",
    "crates/titan-core",
    "crates/hive-intel",
    "crates/mantle-chain",
    "crates/swarm-engine",
    # X402 Swarm Agents (from Stellar Hacks — transplanted)
    "crates/x402-consensus",
    "crates/x402-risk",
    "crates/x402-polymarket",
    "crates/x402-memory",
    "crates/x402-sniper",
    "crates/x402-liquidator",
    "crates/core-ipc",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Concurrent
dashmap = "6"

# HTTP server
axum = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Regex
regex = "1"

# Crypto (for HMAC signatures)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# On-chain (Mantle)
alloy = { version = "2.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
