[package]
name = "mantle-chain"
version = "0.1.0"
edition = "2021"
description = "Mantle L2 adapter — Alloy RPC, ERC-8004 registry, DEX execution"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
alloy = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
