[package]
name = "swarm-engine"
version = "0.1.0"
edition = "2021"
description = "Main orchestrator — wires brain + titan + hive + chain into autonomous swarm"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }

# All 4 dimensions
ouroboros-brain = { path = "../ouroboros-brain" }
titan-core = { path = "../titan-core" }
hive-intel = { path = "../hive-intel" }
mantle-chain = { path = "../mantle-chain" }

# X402 agents
x402-consensus = { path = "../x402-consensus" }
x402-risk = { path = "../x402-risk" }
