[package]
name = "x402-consensus"
version = "0.1.0"
edition = "2024"
description = "PolicyGovernor — multi-agent voting consensus engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
core-ipc = { path = "../core-ipc" }
tokio = { workspace = true }
