[package]
name = "x402-sniper"
version = "0.1.0"
edition = "2024"
description = "DEX execution + x402 bounty protocol client"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

url = "2"
core-ipc = { path = "../core-ipc" }
